--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,13 +27,10 @@ jobs:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-
       - run: npm install -g pnpm
-
       - run: npx pnpm install
       - run: npx pnpm build
       - run: npx pnpm dist:win
@@ -72,7 +69,6 @@ jobs:
       - run: npm install -g pnpm
       - run: npx pnpm install
       - run: npx pnpm build
-
       - run: |
           npx pnpm dist:mac -- --arch arm64 &
           npx pnpm dist:mac -- --arch x64 &
@@ -128,7 +124,7 @@ jobs:
           git push origin HEAD:main --tags
 
       - name: Get version
-        run: echo "VERSION=$(node -p \"require('./package.json').version\")" >> $GITHUB_ENV
+        run: echo "VERSION=$(node -p 'require(\"./package.json\").version')" >> $GITHUB_ENV
 
       - uses: actions/download-artifact@v4
         with:
