--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -129,9 +129,13 @@ jobs:
       - name: Get version
         run: echo "VERSION=$(node -p 'require(\"./package.json\").version')" >> $GITHUB_ENV
 
+      - name: Prepare release directory
+        run: mkdir -p release
+
       - uses: actions/download-artifact@v4
         with:
-          path: release/
+          path: release
+          merge-multiple: true
 
       - name: Verify release files
         run: ls -R release
