--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,21 +38,6 @@ jobs:
       - run: npx pnpm build
       - run: npx pnpm dist:win
 
-      - name: Sign Windows binaries (optional)
-        shell: pwsh
-        run: |
-          if ($env:SIGN_WINDOWS_CERT) {
-            signtool sign `
-              /f $env:SIGN_WINDOWS_CERT `
-              /p $env:SIGN_WINDOWS_PWD `
-              /tr http://timestamp.digicert.com `
-              /td sha256 `
-              /fd sha256 `
-              release\*.exe
-          } else {
-            Write-Host "Skipping Windows signing"
-          }
-
       - uses: actions/upload-artifact@v4
         with:
           name: windows-builds
@@ -76,14 +61,6 @@ jobs:
           npx pnpm dist:mac -- --arch arm64 &
           npx pnpm dist:mac -- --arch x64 &
           wait
-
-      - name: Sign macOS binaries (optional)
-        run: |
-          if [[ -n "$SIGN_MAC_CERT" ]]; then
-            for dmg in release/*.dmg; do
-              codesign --sign "$SIGN_MAC_CERT" --timestamp --options runtime "$dmg"
-            done
-          fi
 
       - uses: actions/upload-artifact@v4
         with:
@@ -127,17 +104,33 @@ jobs:
           git push origin HEAD:main --tags
 
       - name: Get version
+        shell: bash
         run: echo "VERSION=$(node -p 'require(\"./package.json\").version')" >> $GITHUB_ENV
 
       - name: Prepare release directory
+        shell: bash
         run: mkdir -p release
 
-      - uses: actions/download-artifact@v4
+      - name: Download Windows artifacts
+        uses: actions/download-artifact@v4
         with:
+          name: windows-builds
           path: release
-          merge-multiple: true
+
+      - name: Download macOS artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: macos-builds
+          path: release
+
+      - name: Download Linux artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-builds
+          path: release
 
       - name: Verify release files
+        shell: bash
         run: ls -R release
 
       - uses: softprops/action-gh-release@v1
