--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: macos-builds
-          path: apps/desktop/release/*.dmg
+          path: apps/desktop/release/**/*.dmg
           if-no-files-found: error
 
   linux:
