--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: windows-builds
-          path: apps/desktop/release/*.exe
+          path: dist/win/*   # fixed path
           if-no-files-found: error
 
   macos:
@@ -66,7 +66,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: macos-builds
-          path: apps/desktop/release/**
+          path: dist/mac/*  # fixed path
           if-no-files-found: error
 
   linux:
@@ -88,7 +88,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: linux-builds
-          path: apps/desktop/release/*.AppImage
+          path: dist/linux/*  # fixed path
           if-no-files-found: error
 
   release:
@@ -117,19 +117,19 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: windows-builds
-          path: release
+          path: release/windows
 
       - name: Download macOS artifacts
         uses: actions/download-artifact@v4
         with:
           name: macos-builds
-          path: release
+          path: release/macos
 
       - name: Download Linux artifacts
         uses: actions/download-artifact@v4
         with:
           name: linux-builds
-          path: release
+          path: release/linux
 
       - name: Verify release files
         run: ls -R release
@@ -139,6 +139,6 @@ jobs:
           tag_name: v${{ env.VERSION }}
           name: Houdoku v${{ env.VERSION }}
           generate_release_notes: true
-          files: release/**
+          files: release/**/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
