--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: windows-builds
-          path: dist/win/*   # fixed path
+          path: apps/desktop/release/*
           if-no-files-found: error
 
   macos:
@@ -66,7 +66,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: macos-builds
-          path: dist/mac/*  # fixed path
+          path: apps/desktop/release/*
           if-no-files-found: error
 
   linux:
@@ -88,7 +88,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: linux-builds
-          path: dist/linux/*  # fixed path
+          path: apps/desktop/release/*
           if-no-files-found: error
 
   release:
