--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,14 +34,14 @@ jobs:
         with:
           node-version: 20
       - run: npm install -g pnpm
-      - run: npx pnpm install
-      - run: npx pnpm build
-      - run: npx pnpm dist:win
+      - run: pnpm install
+      - run: pnpm build
+      - run: pnpm dist:win
 
       - uses: actions/upload-artifact@v4
         with:
           name: windows-builds
-          path: apps/desktop/release/*
+          path: apps/desktop/dist/*
           if-no-files-found: error
 
   macos:
@@ -56,17 +56,17 @@ jobs:
         with:
           node-version: 20
       - run: npm install -g pnpm
-      - run: npx pnpm install
-      - run: npx pnpm build
-      - run: |
-          npx pnpm dist:mac -- --arch arm64 &
-          npx pnpm dist:mac -- --arch x64 &
-          wait
+      - run: pnpm install
+      - run: pnpm build
+
+      # IMPORTANT: build sequentially to avoid output conflicts
+      - run: pnpm dist:mac -- --arch arm64
+      - run: pnpm dist:mac -- --arch x64
 
       - uses: actions/upload-artifact@v4
         with:
           name: macos-builds
-          path: apps/desktop/release/*
+          path: apps/desktop/dist/*
           if-no-files-found: error
 
   linux:
@@ -81,14 +81,14 @@ jobs:
         with:
           node-version: 20
       - run: npm install -g pnpm
-      - run: npx pnpm install
-      - run: npx pnpm build
-      - run: npx pnpm dist:linux
+      - run: pnpm install
+      - run: pnpm build
+      - run: pnpm dist:linux
 
       - uses: actions/upload-artifact@v4
         with:
           name: linux-builds
-          path: apps/desktop/release/*
+          path: apps/desktop/dist/*
           if-no-files-found: error
 
   release:
@@ -107,7 +107,6 @@ jobs:
           git push origin HEAD:main --tags
 
       - name: Get version
-        shell: bash
         run: echo "VERSION=$(node -p 'require(\"./package.json\").version')" >> $GITHUB_ENV
 
       - name: Prepare release directory
