Github Tweek build YAML

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: windows-builds
-          path: apps/desktop/dist/*
+          path: apps/desktop/dist/**
           if-no-files-found: error
 
   macos:
@@ -59,14 +59,14 @@ jobs:
       - run: pnpm install
       - run: pnpm build
 
-      # IMPORTANT: build sequentially to avoid output conflicts
-      - run: pnpm dist:mac -- --arch arm64
-      - run: pnpm dist:mac -- --arch x64
+      # electron-builder requires --arm64 / --x64 (NOT --arch)
+      - run: pnpm dist:mac -- --arm64
+      - run: pnpm dist:mac -- --x64
 
       - uses: actions/upload-artifact@v4
         with:
           name: macos-builds
-          path: apps/desktop/dist/*
+          path: apps/desktop/dist/**
           if-no-files-found: error
 
   linux:
@@ -88,7 +88,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: linux-builds
-          path: apps/desktop/dist/*
+          path: apps/desktop/dist/**
           if-no-files-found: error
 
   release:
