--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,27 +7,53 @@ on:
   workflow_dispatch:
     inputs:
       bump_version:
-        description: 'Bump version? (true/false)'
-        required: true
-        default: false
+        description: "Bump version?"
         type: boolean
+        default: false
       version_bump_type:
-        description: 'Type of version bump (patch, minor, major)'
-        required: false
-        default: 'patch'
+        description: "Version bump type"
         type: choice
+        default: patch
         options:
           - patch
           - minor
           - major
 
 jobs:
+  tag:
+    name: Create Release Tag
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.version.outputs.version }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Bump version
+        if: ${{ inputs.bump_version }}
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          npm version ${{ inputs.version_bump_type }}
+          git push --follow-tags
+
+      - id: version
+        run: echo "version=$(node -p 'require(\"./package.json\").version')" >> $GITHUB_OUTPUT
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ steps.version.outputs.version }}
+          name: Houdoku v${{ steps.version.outputs.version }}
+          draft: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   windows:
-    name: Build Windows Installer + Portable
+    needs: tag
     runs-on: windows-latest
     env:
-      ELECTRON_BUILDER_PUBLISH: never
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      ELECTRON_BUILDER_PUBLISH: onTagOrDraft
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -38,21 +64,12 @@ jobs:
       - run: pnpm build
       - run: pnpm dist:win
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: windows-builds
-          path: |
-            apps/desktop/dist/*.exe
-            apps/desktop/dist/*.msi
-            apps/desktop/dist/*.zip
-          if-no-files-found: error
-
   macos:
-    name: Build macOS ARM + Intel
+    needs: tag
     runs-on: macos-latest
     env:
-      ELECTRON_BUILDER_PUBLISH: never
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      ELECTRON_BUILDER_PUBLISH: onTagOrDraft
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -63,20 +80,12 @@ jobs:
       - run: pnpm build
       - run: pnpm dist:mac
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: macos-builds
-          path: |
-            apps/desktop/dist/*.dmg
-            apps/desktop/dist/*.zip
-          if-no-files-found: error
-
   linux:
-    name: Build Linux AppImage
+    needs: tag
     runs-on: ubuntu-latest
     env:
-      ELECTRON_BUILDER_PUBLISH: never
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      ELECTRON_BUILDER_PUBLISH: onTagOrDraft
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -86,67 +95,3 @@ jobs:
       - run: pnpm install
       - run: pnpm build
       - run: pnpm dist:linux
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: linux-builds
-          path: |
-            apps/desktop/dist/*.AppImage
-            apps/desktop/dist/*.deb
-            apps/desktop/dist/*.rpm
-          if-no-files-found: error
-
-  release:
-    name: Create GitHub Release
-    runs-on: ubuntu-latest
-    needs: [windows, macos, linux]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Bump version
-        if: ${{ github.event.inputs.bump_version == true }}
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          npm version ${{ github.event.inputs.version_bump_type }}
-          git push origin HEAD:main --tags
-
-      - name: Get version
-        run: echo "VERSION=$(node -p 'require(\"./package.json\").version')" >> $GITHUB_ENV
-
-      - name: Prepare release directory
-        run: mkdir -p release
-
-      - name: Download Windows artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: windows-builds
-          path: release/windows
-
-      - name: Download macOS artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: macos-builds
-          path: release/macos
-
-      - name: Download Linux artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: linux-builds
-          path: release/linux
-
-      - uses: softprops/action-gh-release@v1
-        with:
-          tag_name: v${{ env.VERSION }}
-          name: Houdoku v${{ env.VERSION }}
-          generate_release_notes: true
-          files: |
-            release/**/*.exe
-            release/**/*.msi
-            release/**/*.zip
-            release/**/*.dmg
-            release/**/*.AppImage
-            release/**/*.deb
-            release/**/*.rpm
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
