--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -10,7 +10,7 @@
     "build": "electron-vite build",
     "preview": "electron-vite preview",
     "lint": "biome lint src",
-    "dist:win": "pnpm electron-builder --win --publish never",
+    "dist:win": "pnpm electron-builder --win --publish onTagOrDraft",
     "dist:mac": "pnpm electron-builder --publish onTagOrDraft --mac",
     "dist:linux": "pnpm electron-builder --publish onTagOrDraft --linux"
   },
